Using StringBuffer instead of resource-heavy java.net.URL to transform locations.